проверено по ПП

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -50,10 +50,12 @@
           <li class="catalog-products__card product-card">
             <a class="product-card__link" href="#">
               <picture>
-                <source media="(min-width: 768px)" srcset="./img/chicken-05-tablet@1.webp 1x, ./img/chicken-05-tablet@2x.webp 2x" width="161" height="172">
-                <source type="image/webp" srcset="./img/chicken-05-mobile@1.webp 1x, ./img/chicken-05-mobile@2x.webp 2x" width="68" height="86">
-                <source media="(min-width: 768px)" srcset="./img/chicken-05-tablet@1.png 1x, ./img/chicken-05-tablet@2x.png 2x" width="161" height="172">
-                <img class="product-card__image" src="./img/chicken-05-mobile@1.png" srcset="./img/chicken-05-mobile@2x.png 2x" alt="Cat Energy PRO 500 г." width="68" height="86">
+                <source media="(min-width: 1440px)" srcset="./img/chicken-05-desktop@1.webp 1x, ./img/chicken-05-desktop@2x.webp 2x" width="172" height="196">
+                <source media="(min-width: 768px)" srcset="./img/chicken-05-tablet@1.webp 1x, ./img/chicken-05-tablet@2x.webp 2x" width="168" height="200">
+                <source type="image/webp" srcset="./img/chicken-05-mobile@1.webp 1x, ./img/chicken-05-mobile@2x.webp 2x" width="140" height="112">
+                <source media="(min-width: 1440px)" srcset="./img/chicken-05-desktop@1.png 1x, ./img/chicken-05-desktop@2x.png 2x" width="172" height="196">
+                <source media="(min-width: 768px)" srcset="./img/chicken-05-tablet@1.png 1x, ./img/chicken-05-tablet@2x.png 2x" width="168" height="200">
+                <img class="product-card__image" src="./img/chicken-05-mobile@1.png" srcset="./img/chicken-05-mobile@2x.png 2x" alt="Cat Energy PRO 500 г." width="140" height="112">
               </picture>
             </a>
             <div class="product-card__wrapper">
@@ -80,10 +82,12 @@
           <li class="catalog-products__card product-card">
             <a class="product-card__link" href="#">
               <picture>
-                <source media="(min-width: 768px)" srcset="./img/chicken-tablet@1.webp 1x, ./img/chicken-tablet@2x.webp 2x" width="168" height="206">
+                <source media="(min-width: 1440px)" srcset="./img/chicken-desktop@1.webp 1x, ./img/chicken-desktop@2x.webp 2x" width="172" height="196">
+                <source media="(min-width: 768px)" srcset="./img/chicken-tablet@1.webp 1x, ./img/chicken-tablet@2x.webp 2x" width="168" height="200">
                 <source type="image/webp" srcset="./img/chicken-mobile@1.webp 1x, ./img/chicken-mobile@2x.webp 2x" width="84" height="100">
-                <source media="(min-width: 768px)" srcset="./img/chicken-tablet@1.png 1x, ./img/chicken-tablet@2x.png 2x" width="168" height="206">
-                <img class="product-card__image" src="./img/chicken-mobile@1.png" srcset="./img/chicken-mobile@2x.png 2x" alt="Cat Energy PRO 1000 г." width="84" height="100">
+                <source media="(min-width: 1440px)" srcset="./img/chicken-desktop@1.png 1x, ./img/chicken-desktop@2x.png 2x" width="172" height="196">
+                <source media="(min-width: 768px)" srcset="./img/chicken-tablet@1.png 1x, ./img/chicken-tablet@2x.png 2x" width="168" height="200">
+                <img class="product-card__image" src="./img/chicken-mobile@1.png" srcset="./img/chicken-mobile@2x.png 2x" alt="Cat Energy PRO 1000 г." width="140" height="112">
               </picture>
             </a>
             <div class="product-card__wrapper">
@@ -110,10 +114,12 @@
           <li class="catalog-products__card product-card">
             <a class="product-card__link" href="#">
               <picture>
-                <source media="(min-width: 768px)" srcset="./img/fish-05-tablet@1.webp 1x, ./img/fish-05-tablet@2x.webp 2x" width="161" height="172">
+                <source media="(min-width: 1440px)" srcset="./img/fish-05-desktop@1.webp 1x, ./img/fish-05-desktop@2x.webp 2x" width="172" height="196">
+                <source media="(min-width: 768px)" srcset="./img/fish-05-tablet@1.webp 1x, ./img/fish-05-tablet@2x.webp 2x" width="168" height="200">
                 <source type="image/webp" srcset="./img/fish-05-mobile@1.webp 1x, ./img/fish-05-mobile@2x.webp 2x" width="68" height="86">
-                <source media="(min-width: 768px)" srcset="./img/fish-05-tablet@1.png 1x, ./img/fish-05-tablet@2x.png 2x" width="161" height="172">
-                <img class="product-card__image" src="./img/fish-05-mobile@1.png" srcset="./img/fish-05-mobile@2x.png 2x" alt="Cat Energy PRO 500 г." width="68" height="86">
+                <source media="(min-width: 1440px)" srcset="./img/fish-05-desktop@1.png 1x, ./img/fish-05-desktop@2x.png 2x" width="172" height="196">
+                <source media="(min-width: 768px)" srcset="./img/fish-05-tablet@1.png 1x, ./img/fish-05-tablet@2x.png 2x" width="168" height="200">
+                <img class="product-card__image" src="./img/fish-05-mobile@1.png" srcset="./img/fish-05-mobile@2x.png 2x" alt="Cat Energy PRO 500 г." width="140" height="112">
               </picture>
             </a>
             <div class="product-card__wrapper">
@@ -140,10 +146,12 @@
           <li class="catalog-products__card product-card">
             <a class="product-card__link" href="#">
               <picture>
-                <source media="(min-width: 768px)" srcset="./img/fish-tablet@1.webp 1x, ./img/fish-tablet@2x.webp 2x" width="168" height="206">
+                <source media="(min-width: 1440px)" srcset="./img/fish-desktop@1.webp 1x, ./img/fish-desktop@2x.webp 2x" width="172" height="196">
+                <source media="(min-width: 768px)" srcset="./img/fish-tablet@1.webp 1x, ./img/fish-tablet@2x.webp 2x" width="168" height="200">
                 <source type="image/webp" srcset="./img/fish-mobile@1.webp 1x, ./img/fish-mobile@2x.webp 2x" width="84" height="100">
-                <source media="(min-width: 768px)" srcset="./img/fish-tablet@1.png 1x, ./img/fish-tablet@2x.png 2x" width="168" height="206">
-                <img class="product-card__image" src="./img/fish-mobile@1.png" srcset="./img/fish-mobile@2x.png 2x" alt="Cat Energy PRO 1000 г." width="84" height="100">
+                <source media="(min-width: 1440px)" srcset="./img/fish-desktop@1.png 1x, ./img/fish-desktop@2x.png 2x" width="172" height="196">
+                <source media="(min-width: 768px)" srcset="./img/fish-tablet@1.png 1x, ./img/fish-tablet@2x.png 2x" width="168" height="200">
+                <img class="product-card__image" src="./img/fish-mobile@1.png" srcset="./img/fish-mobile@2x.png 2x" alt="Cat Energy PRO 1000 г." width="140" height="112">
               </picture>
             </a>
             <div class="product-card__wrapper">
@@ -170,10 +178,12 @@
           <li class="catalog-products__card product-card">
             <a class="product-card__link" href="#">
               <picture>
-                <source media="(min-width: 768px)" srcset="./img/buckwheat-05-tablet@1.webp 1x, ./img/buckwheat-05-tablet@2x.webp 2x" width="161" height="172">
+                <source media="(min-width: 1440px)" srcset="./img/buckwheat-05-desktop@1.webp 1x, ./img/buckwheat-05-desktop@2x.webp 2x" width="172" height="196">
+                <source media="(min-width: 768px)" srcset="./img/buckwheat-05-tablet@1.webp 1x, ./img/buckwheat-05-tablet@2x.webp 2x" width="168" height="200">
                 <source type="image/webp" srcset="./img/buckwheat-05-mobile@1.webp 1x, ./img/buckwheat-05-mobile@2x.webp 2x" width="68" height="86">
-                <source media="(min-width: 768px)" srcset="./img/buckwheat-05-tablet@1.png 1x, ./img/buckwheat-05-tablet@2x.png 2x" width="161" height="172">
-                <img class="product-card__image" src="./img/buckwheat-05-mobile@1.png" srcset="./img/buckwheat-05-mobile@2x.png 2x" alt="Cat Energy slim 500 г." width="68" height="86">
+                <source media="(min-width: 1440px)" srcset="./img/buckwheat-05-desktop@1.png 1x, ./img/buckwheat-05-desktop@2x.png 2x" width="172" height="196">
+                <source media="(min-width: 768px)" srcset="./img/buckwheat-05-tablet@1.png 1x, ./img/buckwheat-05-tablet@2x.png 2x" width="168" height="200">
+                <img class="product-card__image" src="./img/buckwheat-05-mobile@1.png" srcset="./img/buckwheat-05-mobile@2x.png 2x" alt="Cat Energy slim 500 г." width="140" height="112">
               </picture>
             </a>
             <div class="product-card__wrapper">
@@ -200,10 +210,12 @@
           <li class="catalog-products__card product-card">
             <a class="product-card__link" href="#">
               <picture>
-                <source media="(min-width: 768px)" srcset="./img/buckwheat-tablet@1.webp 1x, ./img/buckwheat-tablet@2x.webp 2x" width="168" height="206">
+                <source media="(min-width: 1440px)" srcset="./img/buckwheat-desktop@1.webp 1x, ./img/buckwheat-desktop@2x.webp 2x" width="172" height="196">
+                <source media="(min-width: 768px)" srcset="./img/buckwheat-tablet@1.webp 1x, ./img/buckwheat-tablet@2x.webp 2x" width="168" height="200">
                 <source type="image/webp" srcset="./img/buckwheat-mobile@1.webp 1x, ./img/buckwheat-mobile@2x.webp 2x" width="84" height="100">
-                <source media="(min-width: 768px)" srcset="./img/buckwheat-tablet@1.png 1x, ./img/buckwheat-tablet@2x.png 2x" width="168" height="206">
-                <img class="product-card__image" src="./img/buckwheat-mobile@1.png" srcset="./img/buckwheat-mobile@2x.png 2x" alt="Cat Energy slim 1000 г." width="84" height="100">
+                <source media="(min-width: 1440px)" srcset="./img/buckwheat-desktop@1.png 1x, ./img/buckwheat-desktop@2x.png 2x" width="172" height="196">
+                <source media="(min-width: 768px)" srcset="./img/buckwheat-tablet@1.png 1x, ./img/buckwheat-tablet@2x.png 2x" width="168" height="200">
+                <img class="product-card__image" src="./img/buckwheat-mobile@1.png" srcset="./img/buckwheat-mobile@2x.png 2x" alt="Cat Energy slim 1000 г." width="140" height="112">
               </picture>
             </a>
             <div class="product-card__wrapper">
@@ -230,10 +242,12 @@
           <li class="catalog-products__card product-card">
             <a class="product-card__link" href="#">
               <picture>
-                <source media="(min-width: 768px)" srcset="./img/rice-05-tablet@1.webp 1x, ./img/rice-05-tablet@2x.webp 2x" width="161" height="172">
+                <source media="(min-width: 1440px)" srcset="./img/rice-05-desktop@1.webp 1x, ./img/rice-05-desktop@2x.webp 2x" width="172" height="196">
+                <source media="(min-width: 768px)" srcset="./img/rice-05-tablet@1.webp 1x, ./img/rice-05-tablet@2x.webp 2x" width="168" height="200">
                 <source type="image/webp" srcset="./img/rice-05-mobile@1.webp 1x, ./img/rice-05-mobile@2x.webp 2x" width="68" height="86">
-                <source media="(min-width: 768px)" srcset="./img/rice-05-tablet@1.png 1x, ./img/rice-05-tablet@2x.png 2x" width="161" height="172">
-                <img class="product-card__image" src="./img/rice-05-mobile@1.png" srcset="./img/rice-05-mobile@2x.png 2x" alt="Cat Energy slim 500 г." width="68" height="86">
+                <source media="(min-width: 1440px)" srcset="./img/rice-05-desktop@1.png 1x, ./img/rice-05-desktop@2x.png 2x" width="172" height="196">
+                <source media="(min-width: 768px)" srcset="./img/rice-05-tablet@1.png 1x, ./img/rice-05-tablet@2x.png 2x" width="168" height="200">
+                <img class="product-card__image" src="./img/rice-05-mobile@1.png" srcset="./img/rice-05-mobile@2x.png 2x" alt="Cat Energy slim 500 г." width="140" height="112">
               </picture>
             </a>
             <div class="product-card__wrapper">
@@ -307,20 +321,21 @@
       </div>
     </section>
     <section class="main-inner__map map map--inner map--nojs">
-      <div class="page__centerer">
-        <div class="map__container">
-          <div class="map__text-wrapper">
-            <h2 class="map__title">Приглашаем <br> к&nbsp;сотрудничеству <br> дилеров!</h2>
-            <address class="map__address address">
-              <span class="address__text">ул. Большая</span>
-              <span class="address__text">Конюшенная, д. 19/8</span>
-              <span class="address__text">Санкт-Петербург</span>
-            </address>
-          </div>
+      <div class="map__container">
+        <div class="map__text-wrapper">
+          <h2 class="map__title">Приглашаем <br> к&nbsp;сотрудничеству <br> дилеров!</h2>
+          <address class="map__address address">
+            <span class="address__text">ул. Большая</span>
+            <span class="address__text">Конюшенная, д. 19/8</span>
+            <span class="address__text">Санкт-Петербург</span>
+          </address>
         </div>
       </div>
       <div class="map__wrapper">
         <picture>
+          <source media="(min-width: 1440px)" srcset="./img/map-desktop@1.webp 1x, ./img/map-desktop@2x.webp 2x" width="1440" height="400">
+          <source media="(min-width: 768px)" srcset="./img/map-tablet@1.webp 1x, ./img/map-tablet@2x.webp 2x" width="768" height="400">
+          <source type="image/webp" srcset="./img/map-mobile@1.webp 1x, ./img/map-mobile@2x.webp 2x" width="320" height="362">
           <source media="(min-width: 1440px)" srcset="./img/map-desktop@1.jpg 1x, ./img/map-desktop@2x.jpg 2x" width="1440" height="400">
           <source media="(min-width: 768px)" srcset="./img/map-tablet@1.jpg 1x, ./img/map-tablet@2x.jpg 2x" width="768" height="400">
           <img class="map__image" src="./img/map-mobile@1.jpg" srcset="./img/map-mobile@2x.jpg 2x" alt="Карта Санкт-Петербурга с отметкой на нашем офисе." width="320" height="362" loading="lazy">
@@ -373,6 +388,7 @@
       </div>
     </div>
   </footer>
+  <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU"></script>
   <script src="./js/script.min.js"></script>
 </body>
 
