--- a/source/form.html
+++ b/source/form.html
@@ -7,9 +7,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Сайт">
   <title>Интернет-магазин кошачьего корма "Кэт энерджи". Страница - подбор программы.</title>
+  <link rel="preload" href="css/style.min.css" as="style">
+  <link rel="preload" href="js/script.min.js" as="script">
+  <link rel="preload" href="fonts/oswald/oswaldregular.woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="fonts/oswald/oswaldmedium.woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="fonts/lato/lato-regular.woff2" as="font" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.min.css">
   <link rel="icon" href="favicon.ico" sizes="any"><!-- 32×32 -->
-  <link rel="apple-touch-icon" href="img/favicons/apple-icon-180x180.png">
+  <link rel="apple-touch-icon" href="img/favicons/apple-icon.png">
   <link rel="icon" href="img/favicons/icon.svg" type="image/svg+xml">
   <link rel="manifest" href="/manifest.webmanifest">
 </head>
