--- a/source/form.html
+++ b/source/form.html
@@ -48,6 +48,7 @@
     </div>
   </header>
   <main class="form-index">
+    <!-- поля с ошибкой реализованы добавлением класса program__input--error -->
     <section class="form-index__program program">
       <div class="program__container">
         <h1 class="program__title-main">Подбор программы</h1>
