--- a/source/catalog.html
+++ b/source/catalog.html
@@ -51,6 +51,7 @@
     <section class="catalog-products">
       <div class="catalog-products__container">
         <h1 class="catalog-products__title">Каталог продукции</h1>
+        <h2 class="visually-hidden">Список наших товаров.</h2>
         <ul class="catalog-products__list">
           <li class="catalog-products__card product-card">
             <a class="product-card__link" href="#">
